# csad2425ki404rybkaso17

./: README.md
.github/workflows/: ci.yml
client/: CMakeLists.txt  GameHost.cpp  GameHost.h  MainWindow.cpp  MainWindow.h  Singleton.h
client/cmake/: windeployqt.cmake
client/tests/: UTSwClient.cpp
server/: platformio.ini
server/src/: Communicator.cpp  Communicator.h  Main.cpp
